remove some sonar issues